--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -23,7 +23,7 @@ jobs:
           cd scripts
           ls -la
           echo "Merging files..."
-          yq eval-all --inplace 'select(fileIndex == 0) * select(fileIndex == 1)' ./ymlOne.yml ./ymlTwo.yml
+          yq eval-all --inplace 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yml ymlTwo.yml
 
           yq -n 'load(./ymlOne.yml) * load(./ymlTwo.yml)'
           echo ====
