--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           cd scripts
           yq -n 'load("./ymlOne.yaml") * load("./ymlTwo.yaml")'
-          bash run-yq.sh merge scripts/ymlOne.yml scripts/ymlTwo.yml
-          bash run-yq.sh uniq scripts/ymlOne.yml scripts/ymlTwo.yml
-          bash run-yq.sh common scripts/ymlOne.yml scripts/ymlTwo.yml
-          bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
+          #bash run-yq.sh merge scripts/ymlOne.yml scripts/ymlTwo.yml
+          #bash run-yq.sh uniq scripts/ymlOne.yml scripts/ymlTwo.yml
+          #bash run-yq.sh common scripts/ymlOne.yml scripts/ymlTwo.yml
+          #bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
