--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           cd scripts
           #yq -n 'load("./ymlOne.yaml") * load("./ymlTwo.yaml")'
-          bash run-yq.sh merge ./ymlOne.yml ./ymlTwo.yml
+          bash run-yq.sh merge ./ymlOne.yaml ./ymlTwo.yaml
           #bash run-yq.sh uniq scripts/ymlOne.yml scripts/ymlTwo.yml
           #bash run-yq.sh common scripts/ymlOne.yml scripts/ymlTwo.yml
           #bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
