--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -21,6 +21,6 @@ jobs:
           cd scripts
           #yq -n 'load("./ymlOne.yaml") * load("./ymlTwo.yaml")'
           bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
-          bash run-yq.sh uniq ./ymlOne.yaml ./ymlTwo.yaml
+          bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh common scripts/ymlOne.yml scripts/ymlTwo.yml
           #bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
