--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Run Script
         run: |
           cd scripts
+          yq --help
           yq compare ./ymlOne.yaml ./ymlTwo.yaml || true
           yq compare ymlOne.yaml ymlTwo.yaml 
           yq eval-all 'select(fileIndex == 0 and . as "readlink -e ./ymlOne.yaml" | input | "readlink -e ./ymlOne.yaml" == .)' "readlink -e ./ymlOne.yaml" "readlink -e ./ymlTwo.yaml"
