--- a/nginx-phpfpm/values.yaml
+++ b/nginx-phpfpm/values.yaml
@@ -128,6 +128,22 @@ configMaps:
         <html><body>OK</body></html>
       healthz.php: |
         <?php phpinfo(); ?>
+      index.php: |
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Colorful PHP Page</title>
+        </head>
+        <body>
+            <h1 style="color: red;">Hello, World!</h1>
+            <p style="color: orange;">This is an example of colorful PHP page.</p>
+            <p style="color: yellow;">You can modify this file to customize your webpage.</p>
+            <p style="color: green;">Feel free to add more HTML elements and styles as needed.</p>
+            <p style="color: blue;">Have fun coding!</p>
+        </body>
+      </html>
 #  configs:
 #    path: /etc
 #    data:
