--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -19,10 +19,10 @@ jobs:
         
     - name: Deploy Helm Chart
       run: |
-        helm repo add sickhub https://sickhub.github.io/charts
-        helm repo update
-        helm search repo sickhub
-        helm upgrade --create-namespace --namespace test --install --debug --values https://raw.githubusercontent.com/SickHub/charts/main/sickhub/nginx-phpfpm/values.yaml  my-release sickhub/nginx-phpfpm
+        #helm repo add sickhub https://sickhub.github.io/charts
+        #helm repo update
+        #helm search repo sickhub
+        helm upgrade --create-namespace --namespace test --install --debug --values values.yaml  my-release ./nginx-phpfpm
 
     - name: Validate Chart Deployed
       run: |
@@ -43,7 +43,7 @@ jobs:
         SCRIPT_FILENAME=/status \
         REQUEST_METHOD=GET \
         cgi-fcgi -bind -connect "http://192.168.49.2:$NODE_PORT" || true
-        curl --connect-timeout 10 -vki "http://192.168.49.2:$NODE_PORT/index.php" || true
+        curl --connect-timeout 10 -vki "http://192.168.49.2:$NODE_PORT/index.php" 
  
         
   deploy-application:
