--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           cd scripts
           #yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml
-          yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml | yq eval-all 'add'
+          yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml | yq eval-all 'add(.)'
 
 
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
