--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -19,8 +19,7 @@ jobs:
       - name: Run Script
         run: |
           cd scripts
-          #yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml
-          yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml | yq eval-all 'add(.)'
+          yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml
 
 
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
