--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -19,10 +19,7 @@ jobs:
       - name: Run Script
         run: |
           cd scripts
-          diff <(yq eval-all 'select(fileIndex == 0)' ymlOne.yaml) <(yq eval-all 'select(fileIndex == 0)' ymlTwo.yaml)
-
-          #yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml
-
+          yq eval-all 'select(fileIndex == 0 and . as $file1 | input | $file1 == .)' ymlOne.yaml ymlTwo.yaml | yq eval-all 'select(fileIndex == 0)' - | jq -s add
 
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
