--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           cd scripts
           
-          yq eval-all '. as $item | paths(scalars) as $path | [$path, getpath($path)] | join(": ") | . as $line | input | paths(scalars) as $path | [$path, getpath($path)] | join(": ") | select(. == $line) | .[0]' yamlOne.yaml yamlTwo.yaml | sort | uniq -d
+          yq eval-all '. as $item | paths(scalars) as $path | [$path, getpath($path)] | join(": ") | . as $line | input | paths(scalars) as $path | [$path, getpath($path)] | join(": ") | select(. == $line) | .[0]' ymlOne.yaml ymlTwo.yaml | sort | uniq -d
 
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
