--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -2,6 +2,9 @@ name: RevealSecurity CI / CD - Branch Main
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+    - main
   
 jobs:
   deploy-helm-application:
