--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,10 +1,8 @@
-name: RevealSecurity CI / CD - Branch Develop
+name: RevealSecurity CI / CD - Branch Master
 
 on:
-  pull_request:
-    branches:
-      - develop
-
+  workflow_dispatch:
+  
 jobs:
   deploy-helm-application:
     timeout-minutes: 10
@@ -21,6 +19,7 @@ jobs:
         
     - name: Deploy Helm Chart
       run: |
+  
         helm upgrade --create-namespace --namespace test --install --debug --values ./nginx-phpfpm/values.yaml  my-release ./nginx-phpfpm
 
     - name: Validate Chart Deployed
@@ -39,8 +38,8 @@ jobs:
         EXT_IP=`minikube service nginx-phpfpm-node-port -n test --url`
         sleep 5
         curl --connect-timeout 10 -vki "$EXT_IP:$NODE_PORT/index.php" 
-
-build-and-push-application:
+  
+  build-and-push-application:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
@@ -58,3 +57,4 @@ build-and-push-application:
     - name: Push Docker Image
       run: |
         docker push boazhalter/revealsecurity:latest
+        
