--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -19,10 +19,7 @@ jobs:
       - name: Run Script
         run: |
           cd scripts
-          comm ymlOne.yaml ymlTwo.yaml > common_keys_and_values.yaml
-          #yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ymlOne.yaml ymlTwo.yaml > common_keys_and_values.yaml
-          cat common_keys_and_values.yaml
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh common "./ymlOne.yaml" "./ymlTwo.yaml"
-          #bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
+          bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
