--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -22,4 +22,4 @@ jobs:
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh common "./ymlOne.yaml" "./ymlTwo.yaml"
-          bash run-yq.sh sort scripts/ymlOne.yml scripts/ymlTwo.yml
+          bash run-yq.sh sort ./ymlOne.yml ./ymlTwo.yml
