--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -19,7 +19,10 @@ jobs:
       - name: Run Script
         run: |
           cd scripts
-          yq eval-all 'sort_by(keys[]) | .' ./ymlOne.yaml ./ymlTwo.yaml
+          #yq eval-all 'sort_by(keys[]) | .' 
+          yq -i -P 'sort_keys(..)' ./ymlOne.yaml 
+          yq -i -P 'sort_keys(..)' ./ymlTwo.yaml
+          diff file1.yml file2.yml
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh common "./ymlOne.yaml" "./ymlTwo.yaml"
