--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Run Script
         run: |
           cd scripts
-          #yq eval-all 'sort_by(keys[]) | .' 
-          yq -i -P 'sort_keys(..)' ./ymlOne.yaml 
-          yq -i -P 'sort_keys(..)' ./ymlTwo.yaml
-          diff ./ymlOne.yaml  ./ymlTwo.yaml
+          yq eval-all 'sort_keys(..) | .' ./ymlOne.yaml ./ymlTwo.yaml
+          #yq -i -P 'sort_keys(..)' ./ymlOne.yaml 
+          #yq -i -P 'sort_keys(..)' ./ymlTwo.yaml
+          #diff ./ymlOne.yaml  ./ymlTwo.yaml
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh common "./ymlOne.yaml" "./ymlTwo.yaml"
