--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -21,8 +21,8 @@ jobs:
           cd scripts
           #yq eval-all 'sort_keys(..) | .' ./ymlOne.yaml ./ymlTwo.yaml
           yq -i -P 'sort_keys(..)' ./ymlOne.yaml 
-          #yq -i -P 'sort_keys(..)' ./ymlTwo.yaml
-          #diff ./ymlOne.yaml  ./ymlTwo.yaml
+          yq -i -P 'sort_keys(..)' ./ymlTwo.yaml
+          comm ./ymlOne.yaml  ./ymlTwo.yaml
           #bash run-yq.sh merge "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh unique "./ymlOne.yaml" "./ymlTwo.yaml"
           #bash run-yq.sh common "./ymlOne.yaml" "./ymlTwo.yaml"
