--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -13,6 +13,7 @@ jobs:
       
       - name: Fetchfiles
         run: |
+          echo "Test"
           curl "https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml" >> scripts/ymlOne.yaml
           curl "https://raw.githubusercontent.com/BoazHalter/RevealSecurity/dockerfile/.github/workflows/CI-CD.yml" >> scripts/ymlTwo.yaml
 
