--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -16,7 +16,8 @@ jobs:
           echo "Test"
           curl "https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml" >> scripts/ymlOne.yaml
           curl "https://raw.githubusercontent.com/BoazHalter/RevealSecurity/dockerfile/.github/workflows/CI-CD.yml" >> scripts/ymlTwo.yaml
-
+          cat scripts/ymlOne.yaml
+          cat scripts/ymlTwo.yaml
       - name: Run Script
         run: |
           cd scripts
